fix(datagrid): custom single and multi-selection on datagrid level (#2075)
Please check if your PR fulfills the following requirements:

- [x] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

You cannot dynamically set selected items in both single and multi
selection trough the inputs on datagrid level [clrDgSelected] or
[clrDgSingleSelected].

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2981

Both dynamic selection is working now.

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/demo/src/app/datagrid/full/full.html
+++ b/projects/demo/src/app/datagrid/full/full.html
@@ -77,7 +77,7 @@
     </p>
   </div>
 
-  <clr-datagrid *ngIf="!isServerDriven" [(clrDgSelected)]="selected">
+  <clr-datagrid *ngIf="!isServerDriven" [(clrDgSelected)]="selected" [clrDgItemsTrackBy]="trackByFn">
     <clr-dg-column>
       <ng-container *clrDgHideableColumn>User ID</ng-container>
     </clr-dg-column>
@@ -136,6 +136,7 @@
   <clr-datagrid
     *ngIf="isServerDriven"
     [(clrDgSelected)]="selected"
+    [clrDgItemsTrackBy]="trackByFn"
     (clrDgRefresh)="refresh($event)"
     [clrDgLoading]="loading"
   >
