--- a/projects/demo/src/app/datagrid/selection/selection.html
+++ b/projects/demo/src/app/datagrid/selection/selection.html
@@ -29,17 +29,26 @@
   objects, we could perform any operation we want on them.
 </p>
 
+<p>
+  User should be able to dynamically change selection trough datagrid input
+  <code class="clr-code">[(clrDgSelected)]</code>.
+  <button class="btn" (click)="selectItems()">Select items</button>
+</p>
+
 <h3>Client side, no trackBy</h3>
 
 <div class="card card-block">
-  <p class="card-text username-list">
+  <div class="card-text username-list">
     Selected users:
     <em *ngIf="clientNoTrackBySelected.length == 0">No user selected.</em>
-    <span class="username" *ngFor="let user of clientNoTrackBySelected">{{user.name}}</span>
-  </p>
+    <div *ngFor="let user of clientNoTrackBySelected">
+      <div class="username">{{user.name}}</div>
+      <div class="username">Value: {{user | json }}</div>
+    </div>
+  </div>
 </div>
 
-<clr-datagrid [(clrDgSelected)]="clientNoTrackBySelected">
+<clr-datagrid [(clrDgSelected)]="clientNoTrackBySelected" [clrDgItemsTrackBy]="trackByFn">
   <clr-dg-column>User ID</clr-dg-column>
   <clr-dg-column>Name</clr-dg-column>
   <clr-dg-column>Creation date</clr-dg-column>
@@ -69,14 +78,17 @@
 <h3>Client side, trackBy index</h3>
 
 <div class="card card-block">
-  <p class="card-text username-list">
+  <div class="card-text username-list">
     Selected users:
     <em *ngIf="clientTrackByIndexSelected.length == 0">No user selected.</em>
-    <span class="username" *ngFor="let user of clientTrackByIndexSelected">{{user.name}}</span>
-  </p>
+    <div *ngFor="let user of clientTrackByIndexSelected">
+      <div class="username">{{user.name}}</div>
+      <div class="username">Value: {{user | json }}</div>
+    </div>
+  </div>
 </div>
 
-<clr-datagrid [(clrDgSelected)]="clientTrackByIndexSelected">
+<clr-datagrid [(clrDgSelected)]="clientTrackByIndexSelected" [clrDgItemsTrackBy]="trackByFn">
   <clr-dg-column>User ID</clr-dg-column>
   <clr-dg-column>Name</clr-dg-column>
   <clr-dg-column>Creation date</clr-dg-column>
@@ -106,14 +118,17 @@
 <h3>Client side, trackBy item</h3>
 
 <div class="card card-block">
-  <p class="card-text username-list">
+  <div class="card-text username-list">
     Selected users:
     <em *ngIf="clientTrackByIdSelected.length == 0">No user selected.</em>
-    <span class="username" *ngFor="let user of clientTrackByIdSelected">{{user.name}}</span>
-  </p>
+    <div *ngFor="let user of clientTrackByIdSelected">
+      <div class="username">{{user.name}}</div>
+      <div class="username">Value: {{user | json }}</div>
+    </div>
+  </div>
 </div>
 
-<clr-datagrid [(clrDgSelected)]="clientTrackByIdSelected">
+<clr-datagrid [(clrDgSelected)]="clientTrackByIdSelected" [clrDgItemsTrackBy]="trackByFn">
   <clr-dg-column>User ID</clr-dg-column>
   <clr-dg-column>Name</clr-dg-column>
   <clr-dg-column>Creation date</clr-dg-column>
@@ -143,14 +158,22 @@
 <h3>Server-driven, trackBy item</h3>
 
 <div class="card card-block">
-  <p class="card-text username-list">
+  <div class="card-text username-list">
     Selected users:
     <em *ngIf="serverTrackByIdSelected.length == 0">No user selected.</em>
-    <span class="username" *ngFor="let user of serverTrackByIdSelected">{{user.name}}</span>
-  </p>
+    <div *ngFor="let user of serverTrackByIdSelected">
+      <div class="username">{{user.name}}</div>
+      <div class="username">Value: {{user | json }}</div>
+    </div>
+  </div>
 </div>
 
-<clr-datagrid [(clrDgSelected)]="serverTrackByIdSelected" (clrDgRefresh)="refresh($event)" [clrDgLoading]="loading">
+<clr-datagrid
+  [(clrDgSelected)]="serverTrackByIdSelected"
+  (clrDgRefresh)="refresh($event)"
+  [clrDgLoading]="loading"
+  [clrDgItemsTrackBy]="trackByFn"
+>
   <clr-dg-column>User ID</clr-dg-column>
   <clr-dg-column>Name</clr-dg-column>
   <clr-dg-column>Creation date</clr-dg-column>
