--- a/projects/angular/src/button/_properties.toggles.scss
+++ b/projects/angular/src/button/_properties.toggles.scss
@@ -8,7 +8,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('toggle.properties') {
-  :root {
+  @include mixins.root-or-host() {
     &,
     [cds-theme] {
       // colors
