--- a/projects/angular/src/emphasis/_properties.badges.scss
+++ b/projects/angular/src/emphasis/_properties.badges.scss
@@ -8,7 +8,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('badge.properties') {
-  :root {
+  @include mixins.root-or-host() {
     &,
     [cds-theme] {
       --clr-badge-background-color: #{tokens.$cds-alias-utility-gray};
