--- a/projects/angular/src/emphasis/_properties.label.scss
+++ b/projects/angular/src/emphasis/_properties.label.scss
@@ -8,7 +8,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('label.properties') {
-  :root {
+  @include mixins.root-or-host() {
     --clr-label-border-width: #{tokens.$cds-alias-object-border-width-100};
 
     &,
