--- a/projects/angular/src/layout/_properties.login.scss
+++ b/projects/angular/src/layout/_properties.login.scss
@@ -11,7 +11,7 @@
 @use '../utils/variables/variables.density' as density;
 
 @include mixins.exports('login.properties') {
-  :root {
+  @include mixins.root-or-host() {
     [cds-theme] {
       --clr-login-title-color: #{tokens.$cds-alias-typography-color-400};
       --clr-login-hint-color: #{tokens.$cds-alias-typography-color-400};
