--- a/projects/angular/src/layout/nav/_properties.nav.scss
+++ b/projects/angular/src/layout/nav/_properties.nav.scss
@@ -8,7 +8,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('nav.properties') {
-  :root {
+  @include mixins.root-or-host() {
     &,
     & [cds-theme] {
       // Usage: ../utils/_reboot.scss
