--- a/projects/angular/src/layout/nav/_properties.responsive-nav.scss
+++ b/projects/angular/src/layout/nav/_properties.responsive-nav.scss
@@ -8,7 +8,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('responsive-nav.properties') {
-  :root {
+  @include mixins.root-or-host() {
     --clr-responsive-nav-trigger-border-radius: #{tokens.$cds-alias-object-border-radius-100};
     --clr-responsive-nav-overflow-border-radius: #{tokens.$cds-alias-object-border-radius-100};
     --clr-responsive-nav-hamburger-border-radius: #{tokens.$cds-alias-object-border-radius-100};
