--- a/projects/angular/src/progress/progress-bars/_properties.progress-bars.scss
+++ b/projects/angular/src/progress/progress-bars/_properties.progress-bars.scss
@@ -8,7 +8,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('progress.properties') {
-  :root {
+  @include mixins.root-or-host() {
     &,
     & [cds-theme] {
       // Usage: ../progress/progress-bars/_progress-bars.clarity.scss
