--- a/projects/ui/src/temp-overrides.scss
+++ b/projects/ui/src/temp-overrides.scss
@@ -8,7 +8,7 @@
 @use '../../angular/src/utils/mixins';
 @use '../../angular/src/utils/variables/variables.density' as density;
 
-:root {
+@include mixins.root-or-host() {
   &,
   [cds-theme] {
     // font family override
