--- a/projects/demo/src/app/datagrid/selection/selection.html
+++ b/projects/demo/src/app/datagrid/selection/selection.html
@@ -48,7 +48,11 @@
   </div>
 </div>
 
-<clr-datagrid [(clrDgSelected)]="clientNoTrackBySelected" [clrDgItemsTrackBy]="trackByFn">
+<clr-datagrid
+  [(clrDgSelected)]="clientNoTrackBySelected"
+  (clrDgSelectedChange)="selectedChange($event)"
+  [clrDgItemsTrackBy]="trackByFn"
+>
   <clr-dg-column>User ID</clr-dg-column>
   <clr-dg-column>Name</clr-dg-column>
   <clr-dg-column>Creation date</clr-dg-column>
