--- a/projects/demo/src/app/shadow-root/shadow-root.demo.scss
+++ b/projects/demo/src/app/shadow-root/shadow-root.demo.scss
@@ -4,4 +4,25 @@
  * This software is released under MIT license.
  * The full license information can be found in LICENSE in the root directory of this project.
  */
-@use '../../../../angular/src/main.scss';
+@use '../../../../angular/src/emphasis/alert/properties.alert';
+
+.alert-info-background-test {
+  background-color: var(--clr-alert-info-bg-color);
+  height: 100px;
+  width: 500px;
+}
+.alert-warning-background-test {
+  background-color: var(--clr-alert-warning-bg-color);
+  height: 100px;
+  width: 500px;
+}
+.alert-danger-background-test {
+  background-color: var(--clr-alert-danger-bg-color);
+  height: 100px;
+  width: 500px;
+}
+.alert-success-background-test {
+  background-color: var(--clr-alert-success-bg-color);
+  height: 100px;
+  width: 500px;
+}
