--- a/projects/demo/src/app/dropdown/dropdown-angular-positioning.demo.html
+++ b/projects/demo/src/app/dropdown/dropdown-angular-positioning.demo.html
@@ -41,6 +41,7 @@
   </p>
   <p>
     Menu component, with <code class="clr-code">*clrIfOpen</code> (recommended):
+    <button class="btn">ala</button>
     <clr-dropdown>
       <button class="btn btn-outline-primary" clrDropdownTrigger [id]="'if-open'">
         Dropdown
