fix: update budget and typo

--- a/projects/demo/src/app/shadow-root/shadow-root.demo.html
+++ b/projects/demo/src/app/shadow-root/shadow-root.demo.html
@@ -1,6 +1,6 @@
 <h3>Shadow root</h3>
 
-<p><strong>Info:</strong> Not importing all the styles beucae it exceeds largely the styling budget for components</p>
+<p><strong>Info:</strong> Not importing all the styles because it exceeds largely the styling budget for components</p>
 
 <div class="alert-info-background-test">Testing if the token for Alert Info works</div>
 <div class="alert-warning-background-test">Testing if the token for Alert Info works</div>
