--- a/projects/angular/src/layout/breadcrumbs/_properties.breadcrumbs.scss
+++ b/projects/angular/src/layout/breadcrumbs/_properties.breadcrumbs.scss
@@ -8,7 +8,7 @@
 @use '../../utils/variables/variables.density' as density;
 
 @include mixins.exports('breadcrumbs.properties') {
-  :root {
+  @include mixins.root-or-host() {
     &,
     [clr-density] {
       --clr-breadcrumb-item-space: #{density.$clr-base-gap-s};
