fix(ui): allow styles to work under shadow dom (#2085)
Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

What kind of change does this PR introduce?

If you import Clarity styles under shadow dom the :root selector is not
working as this is not available in the shadow dom. We add :where(:root,
:host) to support both cases.

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2985

- [ ] Yes
- [ ] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

--- a/projects/angular/src/accordion/_properties.accordion.scss
+++ b/projects/angular/src/accordion/_properties.accordion.scss
@@ -10,7 +10,7 @@
 @use '../utils/variables/variables.density' as density;
 
 @include mixins.exports('accordion.properties') {
-  :root {
+  @include mixins.root-or-host() {
     &,
     [clr-density] {
       --clr-accordion-border-radius: #{density.$clr-base-border-radius-s};
