--- a/projects/angular/src/layout/nav/_properties.subnav.scss
+++ b/projects/angular/src/layout/nav/_properties.subnav.scss
@@ -9,7 +9,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('subnav.properties') {
-  :root {
+  @include mixins.root-or-host() {
     &,
     & [cds-theme] {
       // Usage: ../layout/nav/_subnav.clarity.scss
