--- a/projects/angular/src/popover/tooltip/_properties.tooltip.scss
+++ b/projects/angular/src/popover/tooltip/_properties.tooltip.scss
@@ -10,7 +10,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('tooltip.properties') {
-  :root {
+  @include mixins.root-or-host() {
     // Usage: ../popover/tooltip/_tooltips.clarity.scss
     --clr-tooltip-font-weight: #{tokens.$cds-global-typography-body-font-weight};
 
