--- a/projects/angular/src/data/datagrid/_properties.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_properties.datagrid.scss
@@ -15,7 +15,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('datagrid.properties') {
-  :root {
+  @include mixins.root-or-host() {
     --clr-datagrid-placeholder-font-weight: #{tokens.$cds-alias-typography-font-weight-semibold};
     --clr-datagrid-placeholder-letter-spacing: #{baselinePx(-0.1)};
     --clr-datagrid-column-separator-expandby: #{tokens.$cds-global-space-6};
