--- a/projects/angular/src/forms/combobox/_properties.combobox.scss
+++ b/projects/angular/src/forms/combobox/_properties.combobox.scss
@@ -10,7 +10,7 @@
 @use '../../utils/variables/variables.density' as density;
 
 @include mixins.exports('combobox.properties') {
-  :root {
+  @include mixins.root-or-host() {
     --clr-combobox-min-width: #{mixins.baselinePx(168)};
     --clr-combobox-multi-min-width: #{mixins.baselinePx(360)};
     --clr-combobox-font-weight: #{tokens.$cds-global-typography-secondary-font-weight};
