--- a/projects/angular/src/progress/spinner/_properties.spinner.scss
+++ b/projects/angular/src/progress/spinner/_properties.spinner.scss
@@ -10,7 +10,7 @@
 @use '../../utils/variables/variables.density' as density;
 
 @include mixins.exports('spinner.properties') {
-  :root {
+  @include mixins.root-or-host() {
     --clr-spinner-inside-button-stroke-width: #{tokens.$cds-alias-object-border-width-200};
     --clr-spinner-inside-treeview-stroke-width: #{tokens.$cds-alias-object-border-width-200};
     --clr-spinner-border-radius: #{tokens.$cds-alias-object-border-radius-300};
