fix(dropdown): justify dropdown-item content to start

--- a/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_dropdown.clarity.scss
@@ -123,7 +123,7 @@
     .btn-link,
     .dropdown-item {
       @include menu-mixins.generate-dropdown-item();
-      @include mixins.overflow-ellipsis(true, 'space-between');
+      @include mixins.overflow-ellipsis(true);
 
       &.active {
         position: relative;
