--- a/projects/angular/src/button/button-group/_button-group.clarity.scss
+++ b/projects/angular/src/button/button-group/_button-group.clarity.scss
@@ -120,20 +120,9 @@
     }
 
     //To avoid double borders
-    .btn:not([disabled]) + .btn {
-      border-left: none;
-    }
-
-    .tooltip:not(:first-child) .btn {
-      border-left: none;
-    }
-
-    .btn:not([disabled]) + .btn-group-overflow {
-      .btn {
-        border-left: none;
-      }
-    }
-
+    .btn:not([disabled]) + .btn,
+    .tooltip:not(:first-child) .btn,
+    .btn:not([disabled]) + .btn-group-overflow .btn,
     .btn:not([disabled]) + .dropdown .dropdown-toggle {
       border-left: none;
     }
