fix: use inline-flex for clr-dropdown inside btn-group

--- a/projects/angular/src/button/button-group/_button-group.clarity.scss
+++ b/projects/angular/src/button/button-group/_button-group.clarity.scss
@@ -20,6 +20,8 @@
     margin-right: buttons-variables.$clr-btn-horizontal-margin;
 
     clr-dropdown {
+      display: inline-flex;
+
       .dropdown-toggle {
         @include square-off-btngroup-btns(left);
         @include square-off-btngroup-btns(right);
