fix(button-group): reduce dropdown-toggle paddings and set correct border-radius (#2091)
Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

Dropdown inside a button-group have additional padding due to the styles
that are for overflow-button of button-group

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: CDE-2991

Styles for overflow-button not applying to clr-dropdown toggle button

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/button/button-group/_button-group.clarity.scss
+++ b/projects/angular/src/button/button-group/_button-group.clarity.scss
@@ -19,6 +19,8 @@
     margin-right: buttons-variables.$clr-btn-horizontal-margin;
 
     clr-dropdown {
+      display: inline-flex;
+
       .dropdown-toggle {
         @include square-off-btngroup-btns(left);
         @include square-off-btngroup-btns(right);
@@ -29,6 +31,17 @@
           border-top-right-radius: buttons-variables.$clr-btn-border-radius;
           border-bottom-right-radius: buttons-variables.$clr-btn-border-radius;
         }
+      }
+
+      &:first-child {
+        .dropdown-toggle {
+          border-top-left-radius: buttons-variables.$clr-btn-border-radius;
+          border-bottom-left-radius: buttons-variables.$clr-btn-border-radius;
+        }
+      }
+
+      &:not(:last-child) .dropdown-toggle {
+        border-right: 0;
       }
     }
 
@@ -107,18 +120,11 @@
     }
 
     //To avoid double borders
-    .btn:not([disabled]) + .btn {
+    .btn:not([disabled]) + .btn,
+    .tooltip:not(:first-child) .btn,
+    .btn:not([disabled]) + .btn-group-overflow .btn,
+    .btn:not([disabled]) + .dropdown .dropdown-toggle {
       border-left: none;
-    }
-
-    .tooltip:not(:first-child) .btn {
-      border-left: none;
-    }
-
-    .btn:not([disabled]) + .btn-group-overflow {
-      .btn {
-        border-left: none;
-      }
     }
 
     //Flat Buttons
@@ -146,7 +152,7 @@
       text-transform: none;
     }
 
-    .dropdown-toggle {
+    .btn-group-overflow .dropdown-toggle {
       display: block;
       padding: 0 density.$clr-base-horizontal-offset-2xl;
       min-width: unset;
