--- a/projects/angular/src/button/button-group/_button-group.clarity.scss
+++ b/projects/angular/src/button/button-group/_button-group.clarity.scss
@@ -20,6 +20,8 @@
     margin-right: buttons-variables.$clr-btn-horizontal-margin;
 
     clr-dropdown {
+      display: inline-flex;
+
       .dropdown-toggle {
         @include square-off-btngroup-btns(left);
         @include square-off-btngroup-btns(right);
@@ -30,6 +32,17 @@
           border-top-right-radius: buttons-variables.$clr-btn-border-radius;
           border-bottom-right-radius: buttons-variables.$clr-btn-border-radius;
         }
+      }
+
+      &:first-child {
+        .dropdown-toggle {
+          border-top-left-radius: buttons-variables.$clr-btn-border-radius;
+          border-bottom-left-radius: buttons-variables.$clr-btn-border-radius;
+        }
+      }
+
+      &:not(:last-child) .dropdown-toggle {
+        border-right: 0;
       }
     }
 
@@ -109,18 +122,11 @@
     }
 
     //To avoid double borders
-    .btn:not([disabled]) + .btn {
+    .btn:not([disabled]) + .btn,
+    .tooltip:not(:first-child) .btn,
+    .btn:not([disabled]) + .btn-group-overflow .btn,
+    .btn:not([disabled]) + .dropdown .dropdown-toggle {
       border-left: none;
-    }
-
-    .tooltip:not(:first-child) .btn {
-      border-left: none;
-    }
-
-    .btn:not([disabled]) + .btn-group-overflow {
-      .btn {
-        border-left: none;
-      }
     }
 
     //Flat Buttons
@@ -148,7 +154,7 @@
       text-transform: none;
     }
 
-    .dropdown-toggle {
+    .btn-group-overflow .dropdown-toggle {
       display: block;
       padding: 0 density.$clr-base-horizontal-offset-2xl;
       min-width: unset;
