fix(dropdown): justify dropdown-item content to start (#2090)
Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

What kind of change does this PR introduce?

This space between was left over that needed to be reverted like #1996 ,

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: #2087

- [ ] Yes
- [ ] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

---------

Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/utils/_mixins.scss
+++ b/projects/angular/src/utils/_mixins.scss
@@ -53,14 +53,13 @@ $clr-outline-spread: variables.$clr_baselineRem_2px;
   outline: 0;
   text-decoration: none;
 }
-
-@mixin overflow-ellipsis($leftAlignment: false, $justifyContent: 'start') {
+@mixin overflow-ellipsis($leftAlignment: false) {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   @if $leftAlignment == true {
     text-align: left;
-    justify-content: #{$justifyContent};
+    justify-content: start;
   }
 }
 
