--- a/projects/angular/src/popover/custom/_popover-popover.clarity.scss
+++ b/projects/angular/src/popover/custom/_popover-popover.clarity.scss
@@ -6,8 +6,8 @@
  */
 
 @use 'sass:map';
-@use '../mixins';
-@use '../variables/variables.global';
+@use '../../utils/mixins';
+@use '../../utils/variables/variables.global';
 @use '@angular/cdk/overlay-prebuilt.css';
 
 @include mixins.exports('smart-popover.clarity') {
