--- a/projects/angular/src/utils/_mixins.scss
+++ b/projects/angular/src/utils/_mixins.scss
@@ -486,3 +486,9 @@ $typography-tokens: (
     margin-bottom: calc(-1 * tokens.$cds-global-space-1);
   }
 }
+@mixin scrollbar-colors(
+  $toggleColor: tokens.$cds-alias-status-neutral,
+  $backgroundColor: tokens.$cds-alias-object-container-background
+) {
+  scrollbar-color: $toggleColor $backgroundColor;
+}
