fix: include dark theme

--- a/projects/angular/src/styles/core/global.scss
+++ b/projects/angular/src/styles/core/global.scss
@@ -6,6 +6,7 @@
  */
 
 @forward './tokens/properties.tokens';
+@forward './theme.dark.scss';
 @forward './module.reset';
 @forward './module.typography';
 @forward './module.layout';
